fix: scrollbar is correct colour again (#115)

--- a/src/stylesheets/basestyles.scss
+++ b/src/stylesheets/basestyles.scss
@@ -1,37 +1,35 @@
+$scrollbarColor: rgba(113, 137, 218, 0.4);
+
+*::-webkit-scrollbar {
+	width: 0.45em;
+}
+
 *::-webkit-scrollbar:hover {
 	background-color: rgba(0, 0, 0, 0.09);
 }
 
-*::-webkit-scrollbar-thumb:vertical {
-	background: rgba(0, 0, 0, 0.5);
-	border-radius: 100px;
-	-webkit-border-radius: 100px;
-}
-
-*::-webkit-scrollbar-thumb:vertical:active {
-	background: rgba(0, 0, 0, 0.61);
-	border-radius: 100px;
-	-webkit-border-radius: 100px;
-}
-
-*::-webkit-scrollbar {
-	width: 0.45em;
-	overflow: visible;
-	border-radius: 4px;
-	-webkit-border-radius: 4px;
-}
-
 *::-webkit-scrollbar-track {
-	background-color: rgba(0, 0, 0, 0.35);
-	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
 	opacity: 0;
 	transition: all 0.5s;
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
 	-webkit-transition: all 0.5s;
 }
 
 *::-webkit-scrollbar-thumb {
-	background-color: rgba(113, 137, 218, 0.4);
-	overflow: visible;
-	border-radius: 50;
+	background-color: $scrollbarColor;
+	border-radius: 4px;
+
+	&:hover {
+		background-color: darken($color: $scrollbarColor, $amount: 2);
+		transition: background-color 0.5s ease;
+	}
+
+	&:vertical {
+		border-radius: 100px;
+		-webkit-border-radius: 100px;
+
+		&:active {
+			border-radius: 100px;
+			-webkit-border-radius: 100px;
+		}
+	}
 }
